# hermes-lite

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  __main__.py  docker-compose.yml  memory.py  pyproject.toml
.github/workflows/: ci.yml
docs/: dev-post-draft.md  openai-codex-oss-application.md  tweet-draft.md
hermes_lite/: __init__.py  __main__.py  cli.py  commands.py  config.py  llm.py  memory_bridge.py  moa.py  observability.py  orchestrator.py  prompts.py  registry.py  router.py  sandbox.py  sanitize.py  subagent.py  tool_loop.py  tools_builtins.py  webui.py
hermes_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hermes_lite/prompts/: personas.md  system.md
scripts/: demo.py
smoke/: latency.json
tests/: conftest.py  test_api_key_exhaustion.py  test_auth.py  test_cli_commands.py  test_e2e_smoke.py  test_llm.py  test_memory.py  test_memory_bridge.py  test_moa.py  test_observability.py  test_orchestrator.py  test_rate_limiter.py  test_registry.py  test_router.py  test_sandbox.py  test_sandbox_security.py  test_sanitize.py  test_stream_prompt.py  test_streaming.py  test_subagent.py  test_tool_loop.py  test_tools_essentials.py
