[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lite"
version = "0.6.0"
description = "Hermes-Lite — cloud-first AI agent via NVIDIA NIM Free API. MoA orchestration, rate limiting with per-key buckets and jittered backoff, key rotation, cloud fallback chain, local fallback for offline use."
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "openai>=1.40.0",
]

[project.scripts]
hermes-lite = "hermes_lite.__main__:_main"

[project.optional-dependencies]
stripe = [
    "stripe>=7.0.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["hermes_lite*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
markers = [
    "slow: marks tests that may exceed a few seconds (deselected with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["hermes_lite"]
