[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-lite"
version = "0.9.0"
description = "Hermes-Lite — Fully standalone local-first AI agent. Local Qwen model + NVIDIA NIM cloud escalation. MoA orchestration, streaming, WebUI, rate limiting, sandbox security, standalone web search (ddgs) + URL extraction (trafilatura/httpx). No Hermes Agent dependency."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ahmed Hassan", email = "a.hassan.b.h@gmail.com"},
]
keywords = ["ai", "agent", "llm", "nvidia-nim", "moa", "mixture-of-agents", "llama-cpp", "tool-calling", "standalone", "ddgs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "openai>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/ahmedhabibo/hermes-lite"
Repository = "https://github.com/ahmedhabibo/hermes-lite"
Issues = "https://github.com/ahmedhabibo/hermes-lite/issues"
Changelog = "https://github.com/ahmedhabibo/hermes-lite/releases"

[project.scripts]
hermes-lite = "hermes_lite.__main__:_main"

[project.optional-dependencies]
stripe = [
    "stripe>=7.0.0",
]
web = [
    "ddgs>=8.0.0",
    "trafilatura>=1.6.0",
    "html2text>=2024.2.26",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "hermes-lite[web,test]",
]

[tool.setuptools.packages.find]
include = ["hermes_lite*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
markers = [
    "slow: marks tests that may exceed a few seconds (deselected with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["hermes_lite"]
